--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 -message same page exported function: done
 -auto detect server port: done
 -svg background
--online hosting
+-online hosting :done 03/04/2019
+-email heroku
+-robo 3t :done
